--- a/QE/main.tex
+++ b/QE/main.tex
@@ -234,37 +234,39 @@ Another approach is to remove all the sites that reach a significance below $ p 
 \vfill
 \chapter{Population structure of Quebec}
 
-\section{Brief History of Quebec}
+\section{Brief history of Quebec}
 The Quebec population was founded over four centuries ago from around 8500 settlers from France \citep{Bherer2011,Laberge2005}.
 This small number of settlers are the direct ancestors of the great majority of Quebec's population of 7 million.
-In addition, ancestral contribution is uneven, whereby two thirds of the modern gene pool is attributed to the first 2600 founders \citep{Gagnon2001, Laberge2005}.
+Moreover, ancestral contributions of these settlers across the Saint-Lawrence valley is uneven, whereby two thirds of the modern gene pool is attributed to the first 2600 founders \citep{Gagnon2001, Laberge2005}.
 While the rates of consanguineous unions in Quebec were not higher than in Europe, small population sizes and isolation over time led to increased distant consanguinity \citep{Laberge2005}.
 
-The north east of Quebec (e.g. Saguenay-Lac-Saint-Jean and Charlevoix) displays higher rates of some rare genetic diseases and increased homozygosity which is suggestive of a severe founder effect \citep{Gagnon2001}.
-Western Quebec, on the other hand, has similar prevalence of diseases compared to Europe \citep{Gagnon2001}.
-This discrepancy of disease rates across the Saint-Lawrence valley indicates that the severity of the bottleneck varies across geographic regions \citep{Gagnon2001}.
-
-Indeed, the intensity of the founder effect in Quebec is not consistent across the population as there is evidence of geographical stratification which has been attributed to a number of factors like varying concentration of founders, native ancestry and geographic isolation \citep{Gagnon2001,Laberge2005,Bherer2011}.
-The founders of Quebec were not all from the same regions in France, providing some initial diversity despite small initial population sizes \citep{Laberge2005}.
-Moreover, Native American admixture with founders has been estimated to be around 1\% which would have also been a source of genetic diversity among these settlements \citep{Moreau2013}.
-Some settlements were more isolated than others resulting in less gene flow between sub-populations.
-The north-east of Quebec is characterized historically as being more isolated with higher emigration rates compared to western Quebec.
+The North-East of Quebec is characterized historically as being more isolated with higher emigration rates compared to Western Quebec.
+Saguenay-Lac-Saint-Jean and Charlevoix also display higher rates of some rare genetic diseases as well increased homozygosity compared to Western Quebec \citep{Gagnon2001}.
+Variation of disease prevalence across the Saint-Lawrence valley indicate that population structure fluctuates across geographic regions \citep{Gagnon2001}.
+Indeed, this pattern of genetic diversity is attributed to a number of factors like concentration of founders, native ancestry and geographic isolation \citep{Gagnon2001,Laberge2005,Bherer2011}.
+The founders of Quebec are not all from the same regions in France.
+In the seventeenth-century, while France was evenly populated, there were not many marriages across great distances \citep{Laberge2005}.
+French settlers came from regions around Paris and Atlantic port towns.
+Each group of settlers carried a distinct gene pool and founded a region of 'Nouvelle-France'.
+The population structure from each of these regions in France provides initial diversity despite small population sizes \citep{Laberge2005}.
+Moreover, Native American ancestry has been estimated to be around 1\% among these settlements \citep{Moreau2013}.
 
 \subsection{A case study of founder populations}
 
-The Quebec founder effect is an interesting case study for population genetics for multiple reasons.
-Firstly, the source population of this bottleneck is still present, which may not be the case for more ancient founder populations. 
-This provides us with the possibility of comparing allele frequencies between Quebec and its ancestral populations of French Atlantic seaports and Paris.
-Secondly, many populations experienced founder effects as humans expanded out of Africa and populated the continents.
+Many populations experienced founder effects as humans expanded out of Africa and populated the continents.
 Studying examples of founder effects in human populations are a great way to improve our understanding of human demographic histories.
-Finally, one unique aspect of this population is the deep genealogical data that spans four centuries and includes over 3 million entries.
-Quebec is not the only recent founder population, but it is among the largest and in combination with its rich genealogical records, it makes it an excellent cohort to study the impact of founder events \citep{Larmuseau2013}.
+The Quebec population is an good case study for population genetics for multiple reasons.
+The source population of this bottleneck is still present, which may not be the case for more ancient migration events. 
+Comparing allele frequencies between France and Quebec can determine more accurately the nature of the colonization.
+The French-Canadian population also has deep genealogical records that span four centuries and includes over 3 million entries.
+Quebec is not the only recent founder population, but it is among the largest and in combination with its rich genealogical records, it makes it an excellent cohort to study the impact of founder events \citep{Larmuseau2013,Bherer2010,Gagnon2011,Roy-Gagnon2011}.
 
-There have been several studies in the past few decades that have examined the genetic diversity and population structure of Quebec.
-Using genotype data, linkage disequilibrium and homozygosity analyses of sub-populations within Quebec showed significant structure and relatedness that persists in the current population \citep{Bherer2010,Gagnon2011,Roy-Gagnon2011}.
+There have been several studies in the past few decades that have examined the population structure of Quebec.
+By analyzing the genealogical data they described distinct sub-populations and inferred the relative contribution of founders \citep{Gagnon2001, Bherer2010}.
+Genotype data used to analyze linkage disequilibrium and homozygosity has also revealed significant structure measurable today \citep{ Roy-Gagnon2011}.
 Quebec is not a homogeneous population, but rather made up of a combination of distinct sub-populations.
-This was confirmed with Fst statistics of these groups, indicating substantial genetic structure.
-Of particular interest, Roy-Gagnon (2011) reported that there was greater differentiation between sub-populations of Quebec than between European populations.
+This was confirmed with Fst statistics of these groups, indicating substantial genetic structure \citep{Roy-Gagnon2011}.
+Roy-Gagnon (2011) also reported that there was greater differentiation between sub-populations of Quebec than between European populations.
 While this study included 140 genotyped individuals - a small sample by today's standards - they postulate that this difference is accounted for by genetic drift.
 Alternatively, the heterogeneity of the founder effect in the Quebec population could be explained by a series of separate founder events influenced by variation in the relative isolation, and migration between settlements \citep{Gagnon2001,Laberge2005}.
 
