--- a/QE/main.tex
+++ b/QE/main.tex
@@ -146,7 +146,7 @@ chapterinoneline, % Uncomment to place the chapter title next to the number on o
 
 \section{Introduction}
 The human genome is composed of a mosaic of ancestral genetic material passed on for millennia.
-This pattern of interconnected relatedness is beginning to unveil humanities rich and complex history.
+This pattern of interconnected relatedness is beginning to unveil humanity's rich and complex history.
 Human expansion out of Africa (OOA) is estimated to have occurred between 45,000 and 60,000 years ago \citep{Henn2012}. 
 As humans expanded into new habitats, each new colony was founded by a smaller group departing a larger, more diverse source population.
 The impacts of the OOA bottleneck are still measurable, as distance from Africa is strongly correlated with decreasing genetic diversity \citep{Ramachandran2005}.
@@ -259,10 +259,10 @@ The Quebec population is an good case study for population genetics for multiple
 The source population of this bottleneck is still present, which may not be the case for more ancient migration events. 
 Comparing allele frequencies between France and Quebec can determine more accurately the nature of the colonization.
 The French-Canadian population also has deep genealogical records that span four centuries and includes over 3 million entries.
-Quebec is not the only recent founder population, but it is among the largest and in combination with its rich genealogical records, it makes it an excellent cohort to study the impact of founder events \citep{Larmuseau2013,Bherer2010,Gagnon2011,Roy-Gagnon2011}.
+Quebec is not the only recent founder population, but it is among the largest and in combination with its rich genealogical records, it makes it an excellent cohort to study the impact of founder events \citep{Larmuseau2013,Bherer2011,Gagnon2001,Roy-Gagnon2011}.
 
 There have been several studies in the past few decades that have examined the population structure of Quebec.
-By analyzing the genealogical data they described distinct sub-populations and inferred the relative contribution of founders \citep{Gagnon2001, Bherer2010}.
+By analyzing the genealogical data they described distinct sub-populations and inferred the relative contribution of founders \citep{Gagnon2001, Bherer2011}.
 Genotype data used to analyze linkage disequilibrium and homozygosity has also revealed significant structure measurable today \citep{ Roy-Gagnon2011}.
 Quebec is not a homogeneous population, but rather made up of a combination of distinct sub-populations.
 This was confirmed with Fst statistics of these groups, indicating substantial genetic structure \citep{Roy-Gagnon2011}.
@@ -416,10 +416,10 @@ The same variants identified as being low quality independently in each populati
 \includegraphics[width=\hsize,keepaspectratio]{./Figures/Genizon_BalSac_mapsInMaps4.jpg}
 
 \caption{A map of Quebec colored by a 3D UMAP projection. 
-The coloring of each individual is based on the three dimensional (X,Y,Z) coordinates of the UMAP projection space converted to three dimensional color space (R,G,B).
+The coloring of each individual is based on the three dimensional coordinates of the UMAP projection space (X,Y,Z) converted to three dimensional color space (R,G,B).
 Therefore, Individuals with similar color are closer to each other in the projection.
 Five genetic clusters are visible in the UMAP projection, these clusters also appear to be geographically linked. 
-A flattened 2D view of of the 3D projection used for coloring is presented in the bottom right.}
+A flattened 2D view of of the 3D projection used for coloring is in the bottom right.}
 \label{UMAP}
 \end{figure}
 
